--- a/ui/static/index.html
+++ b/ui/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta name="description" content="Rsbuild application" />
+    <meta charSet="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="<%= mountId %>"></div>
